kubernetes/policies/allow-api-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: reliability-api
      app.kubernetes.io/component: api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: redis
              app.kubernetes.io/component: redis
      ports:
        - protocol: TCP
          port: 6379
